Añado templates de todo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section>
       <!--necesito usar form para pedir los datos--> 
       <h2>Solicite su turno</h2>
-      <form>
+      <form action="solicitarturno.html">
         <p>Nombre y Apellido</p>
         <input type="text" placeholder="Ej: Pedro alvarez"/>
         <p>Dirección de correo electrónico</p>
@@ -79,7 +79,7 @@
           <option value="2023-04-04">4 de abril de 2023</option>
           <option value="2023-04-05">5 de abril de 2023</option>
         </select>
-        <button type="submit">Continuar</button>
+        <input type="submit" value="Continuar" />
       </form>
     </section>
 
