valores.html hecho

--- a/valores.html
+++ b/valores.html
@@ -44,8 +44,29 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Nuestros valores y objetivos</h2>
+    <hr />
+  <section>
+    <h3>Misión</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis veritatis repellendus sint numquam vitae dolores
+      pariatur voluptatem iste consequatur incidunt ea ad, voluptas quo quibusdam impedit quam quasi corporis doloremque!
+    </p>
+    <img src="img/noticiaej.png" width="180" height="180" />
+  </section>
+  <section>
+    <h3>Visión</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis veritatis repellendus sint numquam vitae dolores
+      pariatur voluptatem iste consequatur incidunt ea ad, voluptas quo quibusdam impedit quam quasi corporis doloremque!
+    </p>
+    <img src="img/noticiaej.png" width="180" height="180" />
+  </section>
+  <section>
+    <h3>Valores</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis veritatis repellendus sint numquam vitae dolores
+      pariatur voluptatem iste consequatur incidunt ea ad, voluptas quo quibusdam impedit quam quasi corporis doloremque!
+    </p>
+    <img src="img/noticiaej.png" width="180" height="180" />
+  </section>
   </main>
 </body>
 <!--body-->
