Actualizo staff.html

--- a/staff.html
+++ b/staff.html
@@ -44,8 +44,78 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Directorio</h2>
+    <hr />
+  <table>
+    <tr>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+      <td>
+        <img src="img/personaej.png" width="48" height="48" />
+        <p>Nombre</p>
+        <p>Rango</p>
+      </td>
+    </tr>
+  </table>
   </main>
 </body>
 <!--body-->
