actualizo a consultarturno.html

--- a/consultarturno.html
+++ b/consultarturno.html
@@ -44,8 +44,21 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Consultar Turno</h2>
+    <hr />
+    <section>
+      <form>
+        <label>Ingrese el ID del turno:</label>
+        <input type="text" placeholder="aNYE%&+_}!2"/>
+        <button type="submit">Consultar</button>
+      </form>
+      <hr />
+      <p>Datos del turno:</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iure sint exercitationem consequatur, beatae modi harum ipsum totam, perspiciatis recusandae voluptatem similique fugiat, corrupti facilis voluptatibus facere unde numquam mollitia?</p>
+      <p>Datos del profesional:</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, inventore? Sit vero autem, laborum repellat eius molestiae ratione impedit in accusamus fuga porro tempora, iure earum alias quae hic vel.</p>
+      <img src="img/personaej.png" width="96" height="96"/>
+    </section>
   </main>
 </body>
 <!--body-->
