Actualizo el solicitar turno y corrijo algo del index

--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
           <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
         </select>
         <p>Fechas disponibles</p>
-        <select id="fecha" name="fecha">
-          <option value=""selected hidden disabled>Seleccione</option>
-          <option value="2023-04-01">1 de abril de 2023</option>
-          <option value="2023-04-02">2 de abril de 2023</option>
-          <option value="2023-04-03">3 de abril de 2023</option>
-          <option value="2023-04-04">4 de abril de 2023</option>
-          <option value="2023-04-05">5 de abril de 2023</option>
-        </select>
+        <input type="date"/>
+      <!--
+      <select id="fecha" name="fecha">
+                <option value=""selected hidden disabled>Seleccione</option>
+                <option value="2023-04-01">1 de abril de 2023</option>
+                <option value="2023-04-02">2 de abril de 2023</option>
+                <option value="2023-04-03">3 de abril de 2023</option>
+                <option value="2023-04-04">4 de abril de 2023</option>
+                <option value="2023-04-05">5 de abril de 2023</option>
+              </select>
+             -->
         <input type="submit" value="Continuar" />
       </form>
     </section>
