Agregue el noticias.html

--- a/noticias.html
+++ b/noticias.html
@@ -44,8 +44,45 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Novedades de la institución</h2>
+    <hr />
+    <section>
+      <article>
+        <h3>Noticia ejemplo</h3>
+        <p>Fecha</p>
+        <img src="img/noticiaej.png" width="89" height="89" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+        <a href="noticias.html" target="_self">ver más</a>
+      </article>
+      <article>
+        <h3>Noticia ejemplo</h3>
+        <p>Fecha</p>
+        <img src="img/noticiaej.png" width="89" height="89" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+        <a href="noticias.html" target="_self">ver más</a>
+      </article>
+      <article>
+        <h3>Noticia ejemplo</h3>
+        <p>Fecha</p>
+        <img src="img/noticiaej.png" width="89" height="89" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+        <a href="noticias.html" target="_self">ver más</a>
+      </article>
+      <article>
+        <h3>Noticia ejemplo</h3>
+        <p>Fecha</p>
+        <img src="img/noticiaej.png" width="89" height="89" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+        <a href="noticias.html" target="_self">ver más</a>
+      </article>
+      <article>
+        <h3>Noticia ejemplo</h3>
+        <p>Fecha</p>
+        <img src="img/noticiaej.png" width="89" height="89" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+        <a href="noticias.html" target="_self">ver más</a>
+      </article>
+    </section>
   </main>
 </body>
 <!--body-->
