Actualizo el obra-social.html

--- a/obra-social.html
+++ b/obra-social.html
@@ -44,8 +44,58 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Trabajamos con las siguientes obras sociales</h2>
+    <hr />
+    <section>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+      <article>
+        <a href="https://osde.com.ar" target="_blank">
+          <p>obra social ejemplo</p>
+          <img src="img/obrasocialej.png" width="89" height="89" />
+        </a>
+      </article>
+    </section>
   </main>
 </body>
 <!--body-->
