Actualize especialidades-profesionales

--- a/especialidades-profesionales.html
+++ b/especialidades-profesionales.html
@@ -44,8 +44,100 @@
   </nav>
   <!--navbar-->
   <!--body-->
-  <main>
-    
+  <main><h2>Especialidades y profesionales</h2>
+    <hr />
+    <section>
+      <form>
+        <p for="Especialidad">Escoja una especialidad</p>
+        <select>
+          <option value=""selected hidden disabled>Seleccione</option>
+          <option value="Psiquiatria">Psiquiatria</option>
+          <option value="Ortopedia">Ortopedia</option>
+          <option value="Neurologia">Neurologia</option>
+          <option value="Cardiologia">Cardiologia</option>
+        </select>
+        <p for="Profesional">Escoja un/a profesional</p>
+        <select>
+          <option value=""selected hidden disabled>Seleccione</option>
+          <option value="AnaGarcia">Dra. Ana García</option>
+          <option value="JorgeMartinez">Dr. Jorge Martínez</option>
+          <option value="VeroSanchez">Dra. Verónica Sánchez</option>
+          <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
+        </select>
+        <input type="button" value="Continuar" />
+      </form>
+      <hr />
+      <table>
+        <tr>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+          <td>
+            <img src="img/personaej.png" width="48" height="48" />
+            <p>Nombre</p>
+            <p>Rango</p>
+          </td>
+        </tr>
+      </table>
+    </section>
   </main>
 </body>
 <!--body-->
