--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <section>
       <h2>Noticias</h2>
       <!--necesito poner dentro de la seccion articulos, 2 por ejemplo--> 
-      <a href="noticia1.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
-      <a href="noticia2.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
+      <a href="noticias.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
+      <a href="noticias.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
     </section>
 
     <section>
