Añado secuencia de tabindex para solicitar turno rapido

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <section>
       <!--necesito usar form para pedir los datos--> 
       <h2>Solicite su turno</h2>
-      <form action="solicitarturno.html">
+      <form action="solicitarturno.html" tabindex="0">
         <p>Nombre y Apellido</p>
-        <input type="text" placeholder="Ej: Pedro alvarez"/>
+        <input type="text" placeholder="Ej: Pedro alvarez" tabindex="1"/>
         <p>Dirección de correo electrónico</p>
-        <input type="text" placeholder="Ej: Pedrialva@gmail.com"/>
+        <input type="text" placeholder="Ej: Pedrialva@gmail.com" tabindex="2"/>
         <p for="Especialidad">Escoja una especialidad</p>
-        <select>
+        <select tabindex="3">
           <option value=""selected hidden disabled>Seleccione</option>
           <option value="Psiquiatria">Psiquiatria</option>
           <option value="Ortopedia">Ortopedia</option>
@@ -63,7 +63,7 @@
           <option value="Cardiologia">Cardiologia</option>
         </select>
         <p for="Profesional">Escoja un/a profesional</p>
-        <select>
+        <select tabindex="4">
           <option value=""selected hidden disabled>Seleccione</option>
           <option value="AnaGarcia">Dra. Ana García</option>
           <option value="JorgeMartinez">Dr. Jorge Martínez</option>
@@ -71,7 +71,7 @@
           <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
         </select>
         <p>Fechas disponibles</p>
-        <input type="date"/>
+        <input type="date" tabindex="5"/>
       <!--
       <select id="fecha" name="fecha">
                 <option value=""selected hidden disabled>Seleccione</option>
@@ -82,7 +82,7 @@
                 <option value="2023-04-05">5 de abril de 2023</option>
               </select>
              -->
-        <input type="submit" value="Continuar" />
+        <input type="submit" value="Continuar" tabindex="6"/>
       </form>
     </section>
 
