--- a/valores.html
+++ b/valores.html
@@ -14,7 +14,7 @@
         Centro Médico PAW
       </a>
       <form>
-        <input type="text" placeholder="Buscar ..." />
+        <input type="search" placeholder="Buscar ..." />
         <button type="submit">Buscar</button>
       </form>
     </h1>
