Corregí los datalist de especialidades y profe

--- a/index.html
+++ b/index.html
@@ -55,21 +55,23 @@
         <p>Dirección de correo electrónico</p>
         <input type="text" placeholder="Ej: Pedrialva@gmail.com" tabindex="2"/>
         <p for="Especialidad">Escoja una especialidad</p>
-        <select tabindex="3">
+        <input list="listaEspecialidades" />
+        <datalist id="listaEspecialidades" tabindex="3">
           <option value=""selected hidden disabled>Seleccione</option>
           <option value="Psiquiatria">Psiquiatria</option>
           <option value="Ortopedia">Ortopedia</option>
           <option value="Neurologia">Neurologia</option>
           <option value="Cardiologia">Cardiologia</option>
-        </select>
+        </datalist>
         <p for="Profesional">Escoja un/a profesional</p>
-        <select tabindex="4">
+        <input list="listaProfesionales"/>
+        <datalist id="listaProfesionales" tabindex="4">
           <option value=""selected hidden disabled>Seleccione</option>
-          <option value="AnaGarcia">Dra. Ana García</option>
-          <option value="JorgeMartinez">Dr. Jorge Martínez</option>
-          <option value="VeroSanchez">Dra. Verónica Sánchez</option>
-          <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
-        </select>
+          <option value="Dra. Ana García">Dra. Ana García</option>
+          <option value="Dr. Jorge Martínez">Dr. Jorge Martínez</option>
+          <option value="Dra. Verónica Sánchez">Dra. Verónica Sánchez</option>
+          <option value="Dr. Juan Rodríguez">Dr. Juan Rodríguez</option>
+        </datalist>
         <p>Fechas disponibles</p>
         <input type="date" tabindex="5"/>
       <!--
